2nd training/Community/Community/Community1/force-app/main/default/objects/AM_Work_Order__c/AM_Work_Order__c.object-meta.xml
<CustomObject>
    <label>AM Work Order</label>
    <nameField>
        <displayFormat>WO{YY}{MM}{DD}-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AM Work Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>