2nd training/Community/Community/Community1/force-app/main/default/objects/AM_Work_Order__c/fields/Company_Shipper__c.field-meta.xml
<CustomField>
    <fullName>Company_Shipper__c</fullName>
    <label>Company / Shipper</label>
    <type>TextArea</type>
</CustomField>