2nd training/Community/Community/Community1/force-app/main/default/objects/AM_Work_Order__c/fields/Date_Int__c.field-meta.xml
<CustomField>
    <fullName>Date_Int__c</fullName>
    <label>Date (Int)</label>
    <type>Date</type>
</CustomField>