2nd training/Community/Community/Community1/force-app/main/default/objects/AM_Work_Order__c/fields/docsCollect_Payment__c.field-meta.xml
<CustomField>
    <fullName>docsCollect_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collect Payment</label>
    <type>Checkbox</type>
</CustomField>