2nd training/Community/Community/Community1/force-app/main/default/objects/AM_Work_Order__c/fields/docsCollection_Receipt__c.field-meta.xml
<CustomField>
    <fullName>docsCollection_Receipt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collection Receipt</label>
    <type>Checkbox</type>
</CustomField>