2nd training/Community/Community/Community1/force-app/main/default/objects/AM_Work_Order__c/fields/docsDelivery_Order__c.field-meta.xml
<CustomField>
    <fullName>docsDelivery_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delivery Order</label>
    <type>Checkbox</type>
</CustomField>