2nd training/Community/Community/Community1/force-app/main/default/objects/AM_Work_Order__c/fields/docsInsurance_Cert__c.field-meta.xml
<CustomField>
    <fullName>docsInsurance_Cert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance Certificate</label>
    <type>Checkbox</type>
</CustomField>