2nd training/Community/Community/Community1/force-app/main/default/objects/AM_Work_Order__c/fields/docsInvoice__c.field-meta.xml
<CustomField>
    <fullName>docsInvoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice</label>
    <type>Checkbox</type>
</CustomField>