2nd training/Community/Community/Community1/force-app/main/default/objects/AM_Work_Order__c/fields/docsPermit_Others__c.field-meta.xml
<CustomField>
    <fullName>docsPermit_Others__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permit / Others</label>
    <type>Checkbox</type>
</CustomField>