2nd training/Community/Community/Community1/force-app/main/default/objects/AM_Work_Order__c/fields/docsService_Order__c.field-meta.xml
<CustomField>
    <fullName>docsService_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Order</label>
    <type>Checkbox</type>
</CustomField>