2nd training/Community/Community/Community1/force-app/main/default/objects/AM_Work_Order__c/fields/Person_Incharge_Ext__c.field-meta.xml
<CustomField>
    <fullName>Person_Incharge_Ext__c</fullName>
    <label>Person Incharge (Ext)</label>
    <length>45</length>
    <type>Text</type>
</CustomField>