2nd training/Community/Community/Community1/force-app/main/default/objects/AM_Work_Order__c/fields/Specific_Req_Instruc__c.field-meta.xml
<CustomField>
    <fullName>Specific_Req_Instruc__c</fullName>
    <label>Specific Requirements / Instructions</label>
    <type>TextArea</type>
</CustomField>