2nd training/Community/Community/Community1/force-app/main/default/objects/AM_Work_Order__c/fields/Tel_Ext__c.field-meta.xml
<CustomField>
    <fullName>Tel_Ext__c</fullName>
    <label>Tel (Ext)</label>
    <length>45</length>
    <type>Text</type>
</CustomField>