2nd training/Community/Community/Community1/force-app/main/default/objects/AM_Work_Order__c/fields/Tel_Int__c.field-meta.xml
<CustomField>
    <fullName>Tel_Int__c</fullName>
    <defaultValue>$Organization.Phone</defaultValue>
    <label>Tel (Int)</label>
    <length>45</length>
    <type>Text</type>
</CustomField>