2nd training/Community/Community/Community1/force-app/main/default/objects/AM_Work_Order__c/fields/Truck__c.field-meta.xml
<CustomField>
    <fullName>Truck__c</fullName>
    <label>Truck</label>
    <length>45</length>
    <type>Text</type>
</CustomField>