2nd training/Community/Community/Community1/force-app/main/default/objects/AM_Work_Order__c/fields/WOAddress__c.field-meta.xml
<CustomField>
    <fullName>WOAddress__c</fullName>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>