2nd training/Community/Community/Community1/force-app/main/default/objects/AM_Work_Order__c/fields/Work_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Date__c</fullName>
    <label>Work Order Date</label>
    <type>Date</type>
</CustomField>