2nd training/Community/Community/Community1/force-app/main/default/objects/AM_Work_Order__c/fields/Work_Order_Desciption__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Desciption__c</fullName>
    <label>Work Order Desciption</label>
    <type>TextArea</type>
</CustomField>