2nd training/Community/Community/Community1/force-app/main/default/objects/AM_Work_Order__c/fields/woTimeFrom__c.field-meta.xml
<CustomField>
    <fullName>woTimeFrom__c</fullName>
    <label>Work Order Time From</label>
    <length>25</length>
    <type>Text</type>
</CustomField>