2nd training/Community/Community/Community1/force-app/main/default/objects/AM_Work_Order__c/fields/woTimeTo__c.field-meta.xml
<CustomField>
    <fullName>woTimeTo__c</fullName>
    <label>Work Order Time To</label>
    <length>25</length>
    <type>Text</type>
</CustomField>